fixed padding issues on container that was causing scrolling issue on mobile.

--- a/wp-content/themes/global-traveler/css/globalusa.scss
+++ b/wp-content/themes/global-traveler/css/globalusa.scss
@@ -1525,6 +1525,9 @@ h5 {
 						}
 					}
 				}
+				iframe {
+					max-width: 100%;
+				}
 				/*
 				.post-list {
 					.post-wide {
